# RPT-Relativistic-Psychophysical-Time-

./: CITATION.cff  LICENSE  LICENSE-CC-BY-4.0  README.md  pyproject.toml
data/: RPT_blank_template.csv  RPT_simulated_data.csv
docs/: RPT_article.md  RPT_note_final.md  index.md
src/rpt/: __init__.py  rpt_model.py
